--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,15 +1,7 @@
 FROM nginx:stable-alpine
 
-# Instala envsubst para substituir variáveis no template
-RUN apk add --no-cache gettext
-
-# Remove a config padrão
+# Remove o default do container
 RUN rm /etc/nginx/conf.d/default.conf
 
-# Copia o template e o script de inicialização
-COPY ./docker/nginx/default.conf.template /etc/nginx/conf.d/default.conf.template
-COPY ./docker/nginx/start.sh /start.sh
-RUN chmod +x /start.sh
-
-# Usa o script como entrypoint
-CMD ["/start.sh"]
+# Copia o novo config
+COPY ./docker/nginx/default.conf.template /etc/nginx/conf.d/default.conf
